--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     volumes:
       - ./db/data:/var/lib/mysql
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
-  server:
+  web:
     container_name: server
     build:
       context: ./
