--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "google-protobuf": "^3.21.2",
     "grpc-tools": "^1.11.3",
     "md-editor-v3": "^2.4.2",
-    "ts-protoc-gen": "^0.15.0"
+    "ts-protoc-gen": "^0.15.0",
+    "vee-validate": "^4.5.8",
+    "yup": "^0.32.11"
   }
 }
